# fire-fighting-uav

./: LICENSE  README.md  fintan_code.py  mohammed_1_rgb_thermal.py  mohammed_2_nozzle_control.py
Onboard-SDK-ROS-3.8/dji_sdk_demo/: CMakeLists.txt
battery_monitor/: CMakeLists.txt
battery_monitor/launch/: battery_monitor.launch
battery_monitor/msg/: BatteryStatus.msg
battery_monitor/scripts/: battsim.py
battery_monitor/src/: battery_monitor.cpp
fcs_interface/: CMakeLists.txt  package.xml
fcs_interface/config/: swp.json
fcs_interface/scripts/: fcs_landing_Takeoff_Test.py  fcs_nwayspoints_with_intermediatespy.py  fcs_py.py  fcs_py_singlewaypoint.py
fcs_interface/src/: dummy_fcs_interface.cpp  fcs_interface.cpp  fcs_interface_m1.cpp  fcs_interface_m2.cpp  main.cpp
fire_detection/: CMakeLists.txt  package.xml
fire_detection/include/Arduino/thermal_cam/: fire_detector.h  thermal_cam.ino  thermal_camera.h
fire_detection/launch/: fire_detection.launch
fire_detection/scripts/: analyse_thermal.py  fire_detection_node.py
fire_detection/src/: fire_detector.cpp  fire_detector_node.cpp  thermal_camera.cpp
fire_detection/src/fire_detection/: __init__.py  fire_detection.py
mission_controller/: CMakeLists.txt  readme.md
mission_controller/config/: monitoring_scenario.xml  search_pattern.json  search_pattern_one.json  search_pattern_t1.json  search_pattern_t2.json  search_pattern_t3.json  search_pattern_t4.json  search_pattern_t5.json  search_pattern_t6.json  test_tree.xml
mission_controller/launch/: mission_controller.launch
mission_controller/src/: check_fire_status.cpp  check_gimbal_status.cpp  check_visual_status.cpp  check_water_status.cpp  enable_water_monitor_srv.cpp  fly_to_wp_bt_action.cpp  is_battery_ok.cpp  is_battery_required_status.cpp  is_mission_enabled.cpp  mission_controller.cpp  mission_controller_node.cpp  repeat_over_vector.cpp  repeat_over_vector_until_failure.cpp  special_movement_bt_action.cpp  spray_bt_action.cpp
sprayaim1/: CMakeLists.txt  package.xml
sprayaim1/action/: gimbal.action  pump.action
sprayaim1/cfg/: FireTargetConfig.cfg
sprayaim1/launch/: spa_hardwarepgs.launch  spa_simpgs.launch
sprayaim1/msg/: FireTarget.msg  PumpStatus.msg  WallMetrics.msg  WaterStatus.msg  iafiretarget.msg  iapumpstatus.msg  iawaterstatus.msg
sprayaim1/scripts/: communications.py  dft_node.py  gimbal_clientm.py  pgmctrl_srv.py  pgmsim_srv.py  pump_clientm.py  spa_node.py  spa_node_backup.py
test_battery_monitor/: CMakeLists.txt
test_battery_monitor/launch/: battery_monitor_1a.launch  battery_monitor_1a_fail.launch  battery_monitor_1b.launch  battery_monitor_1c.launch  battery_monitor_2a.launch  battery_monitor_2b.launch  battery_monitor_2c.launch  battery_monitor_3a.launch  battery_monitor_3b.launch  battery_monitor_3c.launch  battery_monitor_3d.launch  battery_monitor_3e.launch  battery_monitor_3f.launch  battery_monitor_4a.launch  battery_monitor_4a_check.launch  battery_monitor_4a_fail.launch  battery_monitor_4b.launch  battery_monitor_4c.launch  battery_monitor_4d.launch  battery_monitor_4e.launch  battery_monitor_4f.launch  battery_monitor_4g.launch  battery_monitor_4h.launch  battery_monitor_4i.launch  battery_monitor_dji.launch  battery_monitor_main.launch  battery_monitor_timed.launch
test_battery_monitor/src/: battery_monitor.cpp  battery_monitor_1a_fail.cpp  battery_monitor_Old.cpp  battery_monitor_fail.cpp  test_case_1a.cpp  test_case_1b.cpp  test_case_1c.cpp  test_case_2a.cpp  test_case_2a_old.cpp  test_case_2b.cpp  test_case_2c.cpp  test_case_3a.cpp  test_case_3b.cpp  test_case_3c.cpp  test_case_3d.cpp  test_case_3e.cpp  test_case_3f.cpp  test_case_4a.cpp  test_case_4a_old.cpp  test_case_4b.cpp  test_case_4c.cpp  test_case_4d.cpp  test_case_4e.cpp  test_case_4f.cpp  test_case_4g.cpp  test_case_4h.cpp  test_case_4i.cpp
thermal_camera_mlx90640/: CMakeLists.txt  README.md  package.xml
thermal_camera_mlx90640/launch/: thermal_cam.launch
thermal_camera_mlx90640/src/: mlx90640_server.cpp
uav_msgs/: CMakeLists.txt  package.xml
uav_msgs/action/: FlyToWP.action  LeedsPumpGimbal.action  LeedsPumpPump.action  RelativePosition.action  SearchWP.action  SpecialMovement.action  Spray.action  VisualControlTask.action
uav_msgs/msg/: BatteryPercentage.msg  BatterySim.msg  BatteryStatus.msg  ClosestObject.msg  FireTarget.msg  GimbalStatus.msg  LeedsPumpLevel.msg  RelativePosition.msg  SpecialMovement.msg  VisualControlProgress.msg  VisualNavigation.msg  WallExtremities.msg  WallMetrics.msg  WaterStatus.msg  WayPtSearch.msg  iapumpstatus.msg  iawaterstatus.msg
uav_msgs/srv/: CommandMisc.srv  EnableVisualNavigation.srv  EnableWaterMonitor.srv  ExecuteWaypoint.srv  Report.srv  ReturnHome.srv  SetLocalTarget.srv  TakeOff.srv
uav_pump/: CMakeLists.txt  package.xml
uav_pump/src/: communications.cpp  communications.h  gimbal_action.cpp  gimbal_action.h  pump_action.cpp  pump_action.h  uav_pump_node.cpp
uav_pump/test/: test_uav_pump.cpp  test_uav_pump.launch
visual_navigation/: CMakeLists.txt  package.xml
(+22 files in other folders)
