<?xml version="1.0"?>
<package format="2">
  <name>fire_detection</name>
  <version>0.0.0</version>
  <description>The fire_detection package</description>

  <maintainer email="s.dubey@leeds.ac.uk">Andy Blight</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>uav_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <export>
  </export>
</package>
